clusters/homelab/gateway/httproute-authentik.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: networking
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - "auth.jupitertech.net"
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
