clusters/homelab/gateway/httproute-buzz.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: buzz
  namespace: networking
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - "buzz.jupitertech.net"
  rules:
    - backendRefs:
        - name: buzz
          namespace: buzz
          port: 3000
